Handle wildcard parameter in Connect Clusters list API (#423)